--- a/gintern.html
+++ b/gintern.html
@@ -22,25 +22,29 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand"><span class="bold">Michelle</span>Kim</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="work.html" class="smoothScroll">WORK</a></li>
-					<li><a href="about.html" class="smoothScroll">ABOUT</a></li>
-					<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
-				</ul>
-			</div>
+<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+
+			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
 		</div>
-	</section>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="index.html#work" >WORK</a></li>
+				<li><a href="index.html#about">ABOUT</a></li>
+				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
+
+			</ul>
+		</div>
+	</div>
+</section>
 
 <!-- home section -->
 	<section id="google">
@@ -56,7 +60,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 text-center">
 						<h1 class="heading bold">	In Progress</h1>
-						
+
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
