--- a/index.html
+++ b/index.html
@@ -88,47 +88,47 @@
                		</ul>
                		<div class="wow fadeIn" data-wow-delay="0.6s">
                			<div class="iso-box-wrapper col4-iso-box">
-											<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="second" onclick="location.href='lexmark.html'">
+											<div class="panel spotlight piece left content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="second" onclick="location.href='lexmark.html'">
 											 <a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out"></a>
 											 <!-- <div class="selectedprojects-des"> -->
 			 <h2>Lexmark</h2>
 			 <h4>Internship | UX Design</h4>
 		 </div>
 
-               				 <div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="first" onclick="location.href='vegout.html'">
+               				 <div class="panel spotlight piece left content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="first" onclick="location.href='vegout.html'">
                				 	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out"></a>
 												<!-- <div class="selectedprojects-des"> -->
 				<h2>Veg Out</h2>
 				<h4>Passion Project | Product Design</h4>
 			</div>
 
-				<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="third" onclick="location.href='cnbc.html'">
+				<div class="panel spotlight piece left research content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="third" onclick="location.href='cnbc.html'">
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
 				 <!-- <div class="selectedprojects-des"> -->
 <h2>CNBC</h2>
 <h4>Group Project | UX Research</h4>
 </div>
 
-<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fourth" onclick="location.href='garden.html'">
+<div class="panel spotlight piece left content iso-box arvr col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fourth" onclick="location.href='garden.html'">
  <a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Garden</h2>
 <h4>Group Project | VR Design</h4>
 </div>
-<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
+<div class="panel spotlight piece left design content iso-box col-lg-6 col-md-6 col-sm-6 col-xs-6" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Uvent</h2>
 <h4>Google Design Challenge | UX Design</h4>
 </div>
-<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="sixth" onclick="location.href='comerica.html'">
+<div class="panel spotlight piece left research content iso-boxcol-lg-6 col-md-6 col-sm-6 col-xs-6" id="sixth" onclick="location.href='comerica.html'">
  <a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Comerica</h2>
 <h4>Group Project | UX Research</h4>
 </div>
 
-<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
+<div class="panel spotlight piece left content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
  <a href="michiganmed.html" ><img src="images/michiagnmed2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
 <h2>Michiga Med</h2>
