--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 </head>
 <body>
 
+
+
 <!-- portfolio section -->
 <div id="work">
 	<div class="container">
@@ -86,7 +88,79 @@
                        <li><a href="#" class="opc-main-bg" data-filter=".arvr">AR&VR</a></li>
 
                		</ul>
-								</div>
+
+									<!-- <div class="app">
+									  <ul class="hs full no-scrollbar">
+									    <li class="item" id="second">
+												<a href="lexmark.html" class="image">
+    											<img src="images/lexmarktransparent.png" alt="Lexmark">
+  											</a>
+  											<div class="content">
+													<h2>Lexmark</h2>
+									 				<h4>Internship | UX Design</h4>
+  											</div>
+											</li>
+
+											<li class="item" id="first">
+												<a href="vegout.html" class="image">
+													<img src="images/vegouttransparent.png" alt="VegOut">
+												</a>
+												<div class="content">
+													<h2>Veg Out</h2>
+													<h4>Passion Project | Product Design</h4>
+												</div>
+											</li>
+											<li class="item" id="third">
+												<a href="cnbc.html" class="image">
+													<img src="images/cnbctransparent.png" alt="CNBC">
+												</a>
+												<div class="content">
+													<h2>CNBC</h2>
+													<h4>Group Project | UX Research</h4>
+												</div>
+											</li>
+											<li class="item" id="fourth">
+												<a href="garden.html" class="image">
+													<img src="images/veggardentransparent.png" alt="Veg Garden">
+												</a>
+												<div class="content">
+													<h2>Veg Garden</h2>
+													<h4>Group Project | VR Design</h4>
+												</div>
+											</li>
+											<li class="item" id="fifth">
+												<a href="gintern.html" class="image">
+													<img src="images/google2transparent.png" alt="google">
+												</a>
+												<div class="content">
+													<h2>Uvent</h2>
+													<h4>Google Design Challenge | UX Design</h4>
+												</div>
+											</li>
+											<li class="item" id="sixth">
+												<a href="comerica.html" class="image">
+													<img src="images/comerica2transparent.png" alt="Comerica">
+												</a>
+												<div class="content">
+													<h2>Comerica</h2>
+													<h4>Group Project | UX Research</h4>
+												</div>
+											</li>
+											<li class="item" id="seventh">
+												<a href="michiagnmed.html" class="image">
+													<img src="images/michiganmed2transparent.png" alt="Michigan Med">
+												</a>
+												<div class="content">
+													<h2>Michigan Medicine</h2>
+													<h4>Group Project | UX Research</h4>
+												</div>
+											</li>
+									  </ul>
+									</div> -->
+
+
+
+
                		<div class="wow fadeIn" data-wow-delay="0.6s">
                			<div class="iso-box-wrapper col4-iso-box">
 											<div class="content iso-box design col-lg-6 col-md-6 col-sm-6 col-xs-6" id="second" onclick="location.href='lexmark.html'">
@@ -130,9 +204,9 @@
 </div>
 
 <div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
- <a href="michiganmed.html" ><img src="images/michiagnmed2transparent.png" alt="Veg Out"></a>
+ <a href="michiganmed.html" ><img src="images/michiganmed2transparent.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
-<h2>Michiga Med</h2>
+<h2>Michigan Med</h2>
 <h4>Group Project | UX Research</h4>
 </div>
                			</div>
