--- a/garden.html
+++ b/garden.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!-- SITE TITLE -->
-	<title>Veg Garden</title>
+	<title>VR Garden</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,25 +22,31 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand"><span class="bold">Michelle</span>Kim</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="work.html" class="smoothScroll">WORK</a></li>
-					<li><a href="about.html" class="smoothScroll">ABOUT</a></li>
-					<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" >RESUME</a></li>
-				</ul>
-			</div>
+<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+
+			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
 		</div>
-	</section>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="index.html#work" >WORK</a></li>
+				<li><a href="index.html#about">ABOUT</a></li>
+				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
+
+			</ul>
+		</div>
+	</div>
+</section>
+
+
 
 <!-- home section -->
 	<section id="veggarden">
@@ -55,8 +61,95 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">In Progress</h1>
-					
+					<h1 class="heading bold">VR Veg Garden</h1>
+					<h2 class="subheading">Course Project at the University of Michigan, School of Information, Nov 2019</h2>
+				</div>
+				<p> My group decided to create a virtual reality garden application that can be experienced with Google Cardboard. We each were responsible for different parts of the application.<br><br><br>
+					<img src="images/vrduties.png" alt="manager" width=80% class= "center">
+					.</p>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<hr>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+			</div>
+
+
+<!-- team section -->
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<br><br><br>
+        	<h3>Final Prototype</h3><br><br><br>
+      	</div>
+			</div>
+
+			<div class="row">
+      	<div class="col-lg-2">
+					<iframe width="853" height="480" src="https://www.youtube.com/embed/tPkEyEUiCBk?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      	</div>
+			</div>
+		</div>
+
+	</section>
+
+
+	<section>
+		<div class="container">
+			<div class="row">
+					<div class="col">
+						<br><br><br>
+						<h3>Problem Statement</h3><br><br>
+					</div>
+											 <p>While many pick up gardening as a hobby, it can also combat much more serious issues than boredom such as food deserts. The NGA reports that “16 million children in America are struggling with hunger and obesity coupled with poor nutrition remains at epidemic proportions.” Gardening can not only bring nutritional foods to families living in food deserts but often times, gardening is cheaper than going to the grocery markets to buy fresh or organic produce. Research proves that purchasing tomatoes from the store is significantly more expensive; 8 pounds at the grocery store at an average of $2.56 per pound, equates to a total of $20.48 per eight pounds, resulting in $16 in savings!
+							 GrowerTalks did a survey and learned that the top three reasons that make gardening difficult were time constraints, information and education, and space restraints. With the VR Gardening app, we hope to address these concerns. VR has the opportunity to breach an informational gap in learning how to garden. An essential function would be to provide a low-stakes environment to replicate and test variables in a home garden without doing physical damage to actual plants or wallets of its users. We believe that youth and college aged students will be more likely to use a solution like this in VR due to their literacy of technology while also having a higher opportunity of access to HUDs and headsets in general.<br></p>
+				               <br><br><br><hr>
+
+	    </div>
+	  </div>
+	</section>
+
+<section>
+								             <div class="padding">
+								               <div class="container">
+								                   <div class="col">
+								                     <h3><br><br>Takeaways</h3><br><br>
+								                   </div>
+								                   <div class="col">
+
+
+								                   <li>A basic understanding coding languages, especially HTML, CSS, and Javascript is required for AFrame in order to create elements, while it will help with interactions in both AFrame and Unity. </li>
+								                   <li>We all also had to learn how to position elements on a 3D axis for a virtual reality  environment rather than a 2D web page or application like we are currently used to doing in our other UX classes or at work.</li>
+								                   <li>We were surprised to learn that the proportions were completely different when using an Oculus headset.  What looked like a  proportional garden shed in AFrame appeared to be a tiny playhouse that was dwarfed by 10ft plants.  Going through this exercise, we realized that digital prototyping isn’t just a one size fits all activity.</li>
+
+
+
+
+								                   </div>
+								               </div>
+								             </div>
+													 </section>
+
+
+													 <footer>
+ 														<div class="container">
+ 															<div class="row">
+ 																<div class="col-md-12 col-sm-12">
+ 																	<ul class="social-icon">
+ 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
+ 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
+ 																	</ul>
+ 																</div>
+ 															</div>
+ 														</div>
+ 													</footer>
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
