--- a/ginternchallenge.html
+++ b/ginternchallenge.html
@@ -457,7 +457,7 @@ Constraints: Meet basic scope expectations, but don’t be afraid to surprise. S
                 <div class="padding">
                   <div class="container">
                     <div class="row text-center">
-                      <h3>What I learned about the design process</h3>
+                      <h3>What I learned about myself</h3>
                     </div>
                       <div class="col">
                       <li>I work well under pressure. At first I was intimidated by the project deadline since I was doing freelance design work, research, class, etc but it was so much fun! I only began studying UX design in September and in class we are encouraged to spend entire semesters on a project. I really pushed myself for this project and became more confident as a designer so thank you for giving me this project! </li>
