--- a/comerica.html
+++ b/comerica.html
@@ -51,22 +51,219 @@
 		</div>
 	</section>
 
-<!-- about section -->
+	<!-- about section -->
+		<section id="about">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 col-sm-12 text-center">
+						<h1 class="heading bold">Helping Comerica Bank Innovate</h1>
+						<h2 class="subheading">UX Research at Comerica Bank, May - Aug 2019</h2>
+					</div>
+					<p> Examined internal communication tools and assessed user needs. Provided solutions within company constraints to increase engagement between our client team and the rest of the employees at Comerica Bank.</p>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<hr>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+				</div>
+				<div class="row">
+					<div class="col">
+						<h3>Why did Comerica Bank need us?</h3>
+						<br>
+						<br>
+					</div>
+				</div>
+				<div class="row">
+	      <div class="col">
+	        <p>The clients were dissatisfied with the communication tool they were using to broadcast their news and achievements to the rest of the organization. The clients believed their current communication tool was responsible for the observed low engagement, including low email responses and attendance in all-employee meetings.</div>
+	      <div class="col">
+	        <h3>We aimed to...</h3>
+	        <li>Examine how users interacted with the current tool.
+	        <li>Understand users' needs.
+	        <li>Collect feedback on perception of the Innovation Team from target users.
+	      </div><br>
+	<div class="col">
+	    <h3>UX Skills Practiced</h3>
+	          <li>User Interviews</li>
+	          <li>Stakeholder interviews</li>
+	          <li>Affinity Analysis</li>
+	          <li>Survey Design and Analysis</li>
+
+	        </div>
+
+	        <div class="col">
+	            <h3>Constraints</h3>
+	                  <li>Restricted access to company resources & tools </li>
+	                  <li>Restricted access to target audience</li>
+
+	                </div>
+					</div>
+				</div>
+			</div>
+	</section>
+	<hr>
+
+
+	<!-- about section -->
 	<section id="about">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">In Progress</h1>
-				
-<!-- JAVASCRIPT JS FILES -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/isotope.js"></script>
-<script src="js/imagesloaded.min.js"></script>
-<script src="js/nivo-lightbox.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/custom.js"></script>
+			<div class= "row">
+				<div class="col">
+					<h3>Main Takeaways</h3><br><br>
+				</div>
+			</div>
+		<div class= "row">
+			<div class="col">
+<li>There are challenges that come with dealing with large corporation infrastructure
+At school, instructors are supportive and take steps to facilitate the UX research process but UX was not actively and widely championed for in the client company and the culture impeded some efforts.
+<li>Numbers and statistics are data that everyone can understand because they help people tangibly measure the improvements. If the baseline data is not readily available, it might be worth the effort to gather baseline data before diving into problem solving.
 
-</body>
-</html>
+			</div>
+
+			<div class="col">
+				<h3>What I would have done differently</h3>
+			</div>
+			<div class="col">
+<li>Gather baseline data.
+<li>Consider limitations and stay away from surveys. I maybe should have participated in observation.
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<br>
+	<hr>
+
+
+
+		<section id="about">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 col-sm-12 text-center">
+						<h1 class="heading bold">Phase 1: Understand</h1>
+		     </div>
+			 </div>
+			 <div>
+		</section>
+
+		<section>
+				<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+						<h3>Background Research</h3>
+						<p>Looked into their current tools and did a competitive analysis chart on which products overlapped in which features
+						<li>Out of the 8 internal communication tools, 3 tools did not provide different features.</li></p>
+						<p>Stakeholder Interviews (2)
+						<li>“The expectation going in, and something that might be hard to grasp is that our culture is one where things move at a glacial pace.  This permeates through the entire organization and emails go unanswered, projects take far longer than they should” </li></p>
+						<br>
+					</div>
+					  <br>
+						<h4>User Needs Assessment</h4>
+						<p>Interviews (2 from Innovation team, 3 outside of Innovation team)<br>
+							Primarily wanted to understand which products people used, which products people did not, and what were their frustration
+						<li>People felt overwhelmed
+							<li>Would receive the same context in multiple application channels and tended to think they already read it somewhere else and delete or not pay attention to them
+<li>“People who are so focused on transformation can’t see the value of innovation and see it as extra work”
+<li>Does not remember the last time innovation tried to contact them digitally, only through physical conversations</p>
+<br>
+<p>Survey<br>
+	In hindsight, it was silly to send the survey out when we were trying to figure out a communication problem...
+<li>Received 3 responses, inconclusive results!
+	<li>People who responded were close to the Innovation team and therefore were biased </p>
+
+					  <br>
+						<br>
+						<br>
+						<br>
+							<hr>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
+				<div class="row">
+						<div class="col">
+							<br><br><br>
+							<h3>Conclusions</h3>
+						</div>
+						<p>Having too many communication tools with overlapping featured led to fragmented and inconsistent outcomes.
+				<li>Not many people remember receiving Innovation Team communications.
+				<li>There are problems with consistency in communication.
+					<li>The large number of communication channels can be harmful.
+							<li>People are not engaged with non-essential content.
+
+				</p>
+					               <br><br><br><hr>
+
+		    </div>
+		  </div>
+		</section>
+
+
+														 <section id="about">
+														 	<div class="container">
+														 		<div class="row">
+														 			<div class="col-md-12 col-sm-12 text-center">
+														 				<h1 class="heading bold">Solutions</h1>
+																		</div>
+
+																	</div>
+																</div>
+															</section>
+															<section>
+															 <div class="container">
+																 <div class="row">
+									                 <div class="col">
+																		 <p>Because of an agreement, we cannot showcase all our solutions but here is a mockup with dummy information.
+ 																	                  <li>  Recommended tools that had overlapping features to get rid of the number of tools being used.
+ 																	<li>Redesigned their connect page based on user needs.
+
+ 																	<li>Created a style guide and new logo to better increase their brand identity.
+ 																	    <!-- <img src="images/comericalogo.png" class="img-responsive" style="max-width:50%"> -->
+ 																	<li>Created a new email template to keep communication consistent.</p>
+ 																	</div>
+ 																	  <div class="col">
+																			<img src="images/innovationcenter.png" class="img-responsive" style="max-width:50%">
+
+ 																	  <br><br><hr>
+
+									                 </div>
+									               </div>
+									             </div>
+														 </section>
+	<section>
+
+
+														 <footer>
+	 														<div class="container">
+	 															<div class="row">
+	 																<div class="col-md-12 col-sm-12">
+	 																	<ul class="social-icon">
+	 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
+	 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
+	 																	</ul>
+	 																</div>
+	 															</div>
+	 														</div>
+	 													</footer>
+
+	<!-- JAVASCRIPT JS FILES -->
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/smoothscroll.js"></script>
+	<script src="js/isotope.js"></script>
+	<script src="js/imagesloaded.min.js"></script>
+	<script src="js/nivo-lightbox.min.js"></script>
+	<script src="js/wow.min.js"></script>
+	<script src="js/custom.js"></script>
+
+	</body>
+	</html>
