--- a/michiganmed.html
+++ b/michiganmed.html
@@ -55,11 +55,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<h1 class="heading bold">In Progress</h1>
-					<!-- <h2 class="subheading">A mobile app that helps people eat less meat, October - Nov 2019</h2> -->
+					<h1 class="heading bold">Designing for the Elderly</h1>
+					<h2 class="subheading">UX Research at Michigan Medicine in Ann Arbor MI, Sept - Dec 2018</h2>
 				</div>
-				<!-- <p> Veg Out was a personal passion product design project that I took on because our planet is deteriorating and I wanted to do something about it.
-        Veg Out is meant to be a one-stop resource for anyone who wants to go meat-free.</p> -->
+				<p>Our client organization was the Turner Senior Wellness Program, a community outreach program funded by the University of Michigan Medicine Geriatrics Center and Institute of Gerontology. Turner Senior Wellness is a community focused, free if not low cost, program geared towards enhancing the life of senior residents of Washtenaw County</p>
+				<p>The Turner Senior Wellness Program has a 120-page PDF document that lists the known local resources for older adults in Washtenaw county. Their PDF resource guide contains a list of descriptions of various services meant to alleviate the life of seniors. While the information listed on the PDF is in fact useful, text document searches are greatly unorganized since most of the organization is in the form of unstructured text. The clients are requesting help with designing a more user friendly way to share their resources.</p>
+				<img src="images/michexample2.png" width=100%  alt="manager">
+				<img src="images/michexample.png" width=100% alt="manager">
 				<br>
 				<br>
 				<br>
@@ -71,7 +73,166 @@
 				<br>
 				<br>
 				<br>
+			</div>
 
+
+<!-- team section -->
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<br><br><br>
+        	<h3>Interview Protocol</h3>
+      	</div>
+			</div>
+			<div class="row">
+      	<div class="col">
+					<p>My group and I conducted five contextual inquiry interviews with three different key stakeholders: not tech-savy potential senior users of the resource guide, more tech-savy (part of the technology mentor program at Turner Center) potential senior users of the resource guide, & the pdf resource guide editor. I was responsible for interviewing the less likely to be not tech-savy senior users.
+Here is a snippet of the type of questions asked: </p><br><br>
+      	</div>
+				<br>
+				<br>
+				<br>
+				<br>
+			</div>
+  	</div>
+		<hr>
+	</section>
+
+	<section>
+			<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+					<h3>Interpretation Sessions</h3>
+					<p>After the five interviews, we held interpretation sessions to extract individual pieces of data called "affinity notes" from our five interviews. I was responsible for interpreting my interview with the not technologically savy senior user. Below are twenty of the most insightful affinity notes I collected from the interviews:</p>
+				  <li>Memory is an issue for P01; for example, memorizing every step for a task can be hard for P01.</li>
+				  <li>P01 describes her expert level as in between a beginner and an expert.</li>
+				  <li>P01 only knows how to do tasks when she has been shown how to do them.</li>
+				  <li>P01 does not learn things on her own; she does not google “how-to”</li>
+				  <li>When P01 goes on unfamiliar websites/applications, P01 doesn’t know how to do activities on them</li>
+				  <li>When unexpected events occur, she becomes lost</li>
+				  <li>It’s very clear P01 is confused about how browsers, websites, and a lot of other internet logistics work</li>
+				  <li>P01 friends utilize phones, tablets, laptops (not all do however)</li>
+					<li>She appreciates how the Turner website doesn’t have complicated words</li>
+				 <li>She believes the font can be bigger because readability is difficult</li>
+				 <li>She got to the PDF document in ~10 steps and not all were necessary</li>
+				 <li>For both Ipad and computer, she was able to locate the first categorization listing of resource I requested her to find.</li>
+				 <li>For both Ipad and computer, she was not able to locate the second listing.</li>
+				 <li>For both Ipad and computer, she did not know how to utilize scrolling option.
+
+</li>
+				 <li>She likes the categorization of data and does not think any information is lacking</li>
+				 <li>On the computer,  P01 got to her tasks in quicker steps than the ipad but P01 believes the ipad is still more comfortable</li>
+				 <li>On the computer, P01 attempted to click “back” but that would take P01 out of PDF</li>
+				 <li> found it’s really hard to understand the flow of the website, such as go back to home page from the local resources page. </li>
+				 <li>P01 did not use the CTRL F option even though directions were given.</li>
+				  <br>
+					<br>
+					<br>
+					<br>
+						<hr>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container">
+			<div class="row">
+					<div class="col">
+						<br><br><br>
+						<h3>Affinity Wall Construction</h3>
+					</div>
+											 <p>Together with all of the 250+ affinity notes we collected from our interviews during the interpretation sessions, we constructed an affinity wall. We clustered the affinity notes with related content and created meta clusters, meta meta clusters, etc. Through this activity, we were able to find relevant patterns across the notes that were being summarized. It was important to make sure that there was a good balance between generalization and precision. More importantly, the summaries of the cluster of affinity notes needed to be broad enough that it captured all of the affinity notes the summaries represented but they needed to be specific enough to be meaningful. </p>
+				               <br><br><br><hr>
+
+	    </div>
+	  </div>
+	</section>
+
+	<section>
+		<div class="container">
+			<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="col">
+						<h3>Problem Areas of the Resource Guide</h3></div>
+						<div class= "col-lg-6 col-md-6 col-sm-12">
+						<img src="images/michproblem.png" width=100%  alt="manager"></div>
+							<div class= "col-lg-6 col-md-6 col-sm-12">
+						<img src="images/michproblem2.png" width=100% alt="manager"></div>
+						<p>From the interviews we found various areas of the resource guide which can be improved.</p>
+								<ol>1. Senior users are unfamiliar with the hovering method. They are unable to realize that there are printing options at the top if you move the cursor. 																									</ol>
+								<ol>2. Senior users like the categorization of the resources on the guide but visually it is hard to differentiate for them.</ol>
+								<ol>3. Seniors still run into problems related to search despite the instructions for the control + F feature.</ol>
+								<ol>4. The unfamiliarity with the hovering method also makes seniors unaware of the scroll bar on the right and they use the physical scrolling method on the mouse to go navigate through the 120 page resource guide.</ol>
+								<br><br>
+
+			</div>
+		</div>
+<br><br><br>
+		<hr>
+	</section>
+
+
+		<section>
+			<div class="container">
+				<div class="row">
+					<div classs= "col">
+					<h3>Potrntial Redesign</h3>
+				</div>
+					<div class="col-lg-12 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.6s">
+						<p>We proposed a redesign of the 104 page PDF document. While the ideal solution might seem like a website, through contextual inquiry, we learned that senior already have a vague understanding of logistics regarding computers, browsers, and the Internet, so introducing a website can potentially confuse them more. Additionally, there is a financial limitation that might maker the transition to a website  not feasible. </p>
+						<br><br>
+					</div>
+						<h4>Separation of Information</h4>
+						<div class= "col-lg-6 col-md-6 col-sm-12">
+						<img src="images/michsuggestion.png" width=100%  alt="manager"></div>
+							<div class= "col-lg-6 col-md-6 col-sm-12">
+		<p>During our interview, we asked a user who never interacted with the PDF to look for a specific resource on the guide. When they got to the first page we noticed, they ignored the critical control + F search feature because once they immediately saw links of categories, they began to click away.
+
+Because of this, we believe it will be best to separate the overwhelming and busy first page into three different pages: the title page, instructions page, and another page with an index that includes improved graphics for better readability. </p></div>
+<br><br><br><hr>
+		</div>
+
+		<h4>Instruction Page</h4>
+		<div class= "col-lg-6 col-md-6 col-sm-12">
+		<img src="images/michsuggestion2.png" width=100%  alt="manager"></div>
+			<div class= "col-lg-6 col-md-6 col-sm-12">
+<p>The instructions page will include instructions about the control + F feature, how hyperlinks work, and the hovering feature which exposes the toolbar and scrolling bar.</p></div>
+<br><br><br><hr>
+		</div>
+		</div>
+
+		<h4>Bookmark</h4>
+		<div class= "col-lg-6 col-md-6 col-sm-12">
+		<img src="images/michsuggestion3.png" width=100%  alt="manager"></div>
+			<div class= "col-lg-6 col-md-6 col-sm-12">
+<p>PDFS allow for a bookmark option at the top of their toolbars but the current resource guide does not have one. This makes it difficult for users to navigate through the resource guide, especially when they are searching for more than one agency. For example, if a user finds his information on the last page of the 120 page document, they will have to  manually scroll through all 120 pages since many are unaware of the invisible scrolling bar on the right of ur browser. Therefore, we wanted to include links at top of each page that will direct users to either go to the top of the section they are currently in or go back all the way to the index on the third page..</p></div>
+</div>
+<br><br><br><hr>
+		</div>
+		<h4>Additional Hyperlinks</h4>
+		<div class= "col-lg-6 col-md-6 col-sm-12">
+		<img src="images/michsuggestion4.png" width=100%  alt="manager"></div>
+			<div class= "col-lg-6 col-md-6 col-sm-12">
+<p>If the senior users still ignore the instructions for the hovering feature and have a hard time understanding the hovering method for accessing the toolbars, at the beginning of each page, there will be hyperlinks to go back to the index and go back to the top of each section.</p></div></div>
+<br><br><br><hr>
+		</div>
+	</section>
+
+
+													 <footer>
+ 														<div class="container">
+ 															<div class="row">
+ 																<div class="col-md-12 col-sm-12">
+ 																	<ul class="social-icon">
+ 																		<li><a target="_blank" href="https://www.linkedin.com/in/mkimdesign/" class="fa fa-linkedin wow bounceIn" data-wow-delay="0.9s"></a></li>
+ 																		<li><a target="_blank" href="https://github.com/kminjin" class="fa fa-github wow bounceIn" data-wow-delay="0.9s"></a></li>
+ 																	</ul>
+ 																</div>
+ 															</div>
+ 														</div>
+ 													</footer>
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
