--- a/comerica.html
+++ b/comerica.html
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -264,6 +264,18 @@ At school, instructors are supportive and take steps to facilitate the UX resear
 	<script src="js/nivo-lightbox.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/custom.js"></script>
+	<script>
+	var prevScrollpos = window.pageYOffset;
+	window.onscroll = function() {
+	var currentScrollPos = window.pageYOffset;
+	  if (prevScrollpos > currentScrollPos) {
+	    document.getElementById("navbar").style.top = "0";
+	  } else {
+	    document.getElementById("navbar").style.top = "-70px";
+	  }
+	  prevScrollpos = currentScrollPos;
+	}
+	</script>
 
 	</body>
 	</html>
