--- a/gintern.html
+++ b/gintern.html
@@ -22,7 +22,7 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 
@@ -512,6 +512,18 @@ Constraints: Meet basic scope expectations, but don’t be afraid to surprise. S
 <script src="js/nivo-lightbox.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
+<script>
+var prevScrollpos = window.pageYOffset;
+window.onscroll = function() {
+var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-70px";
+  }
+  prevScrollpos = currentScrollPos;
+}
+</script>
 
 </body>
 </html>
